<resources>

    <string name="app_name">Aplikasi Daftar Film</string>
    <string name="judul_film">Judul Film</string>
    <string name="genre_film">Genre Film</string>
    <string name="score_film">Score Film</string>
    <string name="sinopsiss">Sinopsis :</string>
    <string name="isi_sinopsis">Isi Sinopsis</string>
    <string name="deskripsi_film">Deskripsi Film</string>
    <string name="genre_template">Genre: %1$s</string>
    <string name="score_template">Score: %1$s</string>
    <string name="name_bar_detail">Detail Film</string>

    <string-array name="data_judul_film">
        <item>Aquaman</item>
        <item>Avengers Infinity</item>
        <item>Boohemian Rhapsody</item>
        <item>Bumble Bee</item>
        <item>Deadpool</item>
        <item>Dragon</item>
        <item>Dragon Ball</item>
        <item>Preman Pensiun</item>
        <item>Spiderman</item>
        <item>Venom</item>
    </string-array>

    <string-array name="data_genre_film">
        <item>Action, Adventure, Fantasy</item>
        <item>Adventure, Action, Science Fiction</item>
        <item>Drama, Music</item>
        <item>Action, Adventure, Science Fiction</item>
        <item>Action, Comedy, Adventure</item>
        <item>Animation, Family, Adventure</item>
        <item>Action, Animation, Comedy</item>
        <item>Comedy, Drama</item>
        <item>Action, Adventure, Animation, Science Fiction, Comedy</item>
        <item>Science Fiction, Action</item>
    </string-array>

    <string-array name="data_score_film">
        <item>6,8</item>
        <item>8,3</item>
        <item>8,0</item>
        <item>6,5</item>
        <item>7,5</item>
        <item>7,7</item>
        <item>6,9</item>
        <item>6,5</item>
        <item>8,4</item>
        <item>6,6</item>
    </string-array>

    <string-array name="data_deskripsi_film">
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orm\'s half-human, half-Atlantean brother and true heir to the throne.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock "n" roll band Queen in 1970. Hit songs become instant classics. When Mercury\'s increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
        <item>Wisecracking mercenary Deadpool battles the evil and powerful Cable and other bad guys to save a boy\'s life.</item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</item>
        <item>A retelling of Dragon Ball\'s origin with a different take on the meeting of Goku, Bulma, and Kame-Sen\'nin. It also retells the Red Ribbon Army story; but this time they find Goku rather than Goku finding them.</item>
        <item>After three years, the business of Muslihat (Epi Kusnandar), who has retired as a thug, has a problem. Sales decline. Muslihat also faces new problems when Safira (Safira Maharani), her only daughter, grows up in adolescence and begins to be visited by boys. A bigger problem: frictions between his former subordinates.</item>
        <item>Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson "Kingpin" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
    </string-array>

    <array name="data_photo_film">
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_bumblebee</item>
        <item>@drawable/poster_deadpool</item>
        <item>@drawable/poster_dragon</item>
        <item>@drawable/poster_dragonball</item>
        <item>@drawable/poster_preman</item>
        <item>@drawable/poster_spiderman</item>
        <item>@drawable/poster_venom</item>
    </array>

</resources>
