<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/img_photo_film"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:scaleType="fitXY" />
    <TextView
        android:id="@+id/txt_judul_film"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_toEndOf="@id/img_photo_film"
        android:text="@string/judul_film"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="19sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/txt_genre_film"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_judul_film"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/holo_red_dark"
        android:layout_toRightOf="@id/img_photo_film"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/genre_film" />
    <TextView
        android:id="@+id/txt_score_film"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_genre_film"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/holo_green_dark"
        android:layout_toRightOf="@id/img_photo_film"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/score_film" />
    <TextView
        android:id="@+id/txt_desc_film"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_score_film"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/img_photo_film"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/deskripsi_film" />

</RelativeLayout>