<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <RelativeLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_photo_detail"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:scaleType="fitXY" />
        <TextView
            android:id="@+id/txt_judul_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_toEndOf="@id/img_photo_detail"
            android:text="@string/judul_film"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="23sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/txt_genre_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_judul_detail"
            android:layout_marginStart="26dp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/holo_red_dark"
            android:layout_toRightOf="@id/img_photo_detail"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/genre_film" />
        <TextView
            android:id="@+id/txt_score_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_genre_detail"
            android:layout_marginStart="26dp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/holo_green_dark"
            android:layout_toRightOf="@id/img_photo_detail"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/score_film" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_below="@id/img_photo_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/sinopsiss"
                android:layout_marginTop="16dp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <View
                android:background="@android:color/darker_gray"
                android:layout_marginTop="7dp"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>
            <TextView
                android:id="@+id/txt_isiDesc_detail"
                android:text="@string/isi_sinopsis"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </RelativeLayout>



</ScrollView>